# spin-info

./: .gitignore  Cargo.toml  readme.md  spin-pluginify.toml
src/: app_source.rs  info.rs  main.rs
