[package]
name = "spin-info"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
human_bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
walkdir = "2"

spin-common = { git = "https://github.com/fermyon/spin" }
spin-oci = { git = "https://github.com/fermyon/spin" }
spin-locked-app = { git = "https://github.com/fermyon/spin" }
